# Moodle_rust_bot

./: Cargo.toml
src/: main.rs
src/controllers/: course_controller.rs  deadline_controller.rs  grades_controller.rs  grades_overview_controller.rs  helpers.rs  mod.rs  user_controller.rs
src/models/: course.rs  deadline.rs  grade.rs  grades_overview.rs  user.rs
